--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,21 +29,48 @@ body {
   overflow-y: scroll !important;
 }
 
-h3 {
-  font-size: 30px;
+h1 {
+  font-size: 40px;
   margin-top: 24px;
+  margin-bottom: 16px;
+  font-weight: 700;
+  line-height: 1.25;
+  padding-bottom: 20px;
+  border-bottom: 2px solid #e8e8e8;
+  margin-bottom: 50px;
+}
+h2 {
+  font-size: 33px;
+  margin-top: 50px;
+  margin-bottom: 16px;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+h3 {
+  font-size: 20px;
+  margin-top: 35px;
   margin-bottom: 16px;
   font-weight: 700;
   line-height: 1.25;
 }
 h4 {
-  font-size: 20px;
-  margin-top: 24px;
+  font-size: 16px;
+  margin-top: 30px;
   margin-bottom: 16px;
   font-weight: 700;
 }
 h5 {
   font-size: 16px;
+  margin-top: 24px;
+  margin-bottom: 16px;
+  font-weight: 700;
+}
+h6 {
+  font-size: 14px;
+  margin-top: 24px;
+  margin-bottom: 16px;
+  font-weight: 700;
 }
 p {
   font-size: 14px;
@@ -157,13 +184,13 @@ pre[class*='language-'].line-numbers.line-numbers code {
   color: rgba(0, 0, 0, 0.65);
 }
 .container-breadCrumb {
-  padding-bottom: 20px;
-  border-bottom: 1px solid #e8e8e8;
+  /* padding-bottom: 20px;
+  border-bottom: 1px solid #e8e8e8; */
   color: #cacaca;
 }
 .step {
   padding: 0px 5px;
-  color: #000;
+  color: rgba(0, 0, 0, 0.4);
 }
 /* .sider > div {
   overflow-y: scroll;
