--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,7 +20,7 @@ html {
   font-size: 12px;
 }
 body {
-  color: #101010;
+  color: #3d3a45;
   font-family: 'SourceHanSans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue',
     Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
@@ -147,29 +147,30 @@ pre[class*='language-'].line-numbers.line-numbers code {
 }
 .header {
   position: fixed;
-  height: 48px;
+  height: 70px;
+  /* line-height: 70px; */
   width: 100%;
   z-index: 10;
-  border-bottom: 1px solid #e8e8e8;
+  border-bottom: 1px solid #e3e3e3;
   /* line-height: 45px; */
   background-color: #fff;
   top: 0px;
   left: 0px;
-  box-shadow: 0 3px 8px 0 rgba(116, 129, 141, 0.1);
+  /* box-shadow: 0 3px 8px 0 rgba(116, 129, 141, 0.1); */
 }
 .header-aligns {
   justify-content: space-between;
   flex-wrap: nowrap;
   display: flex !important;
   width: 100%;
-  padding: 7px 20px;
+  height: 70px !important;
 }
 .header-aligns:before,
 .header-aligns:after {
   display: none !important;
 }
 .header-aligns a {
-  padding-top: 5px;
+  /* padding-top: 5px; */
 }
 .ant-btn-primary {
   color: #fff;
@@ -180,18 +181,64 @@ pre[class*='language-'].line-numbers.line-numbers code {
   font-weight: 700;
 }
 .logo {
-  background: url(../images/common/logo_black.png) no-repeat;
-  font-weight: 700;
-  padding-left: 26px;
-  background-size: contain;
+  background: url(../images/common/logo_black.svg) no-repeat 20px center;
+  font-weight: 400;
+  padding-left: 162px;
+  height: 70px;
+  line-height: 70px;
+  /* background-size: contain; */
   /* margin-left: 20px; */
-  width: 240px;
-  color: rgba(0, 0, 0, 0.65);
+  /* width: 240px; */
+  color: rgba(0, 0, 0, 0.8);
+}
+.logo-text {
+  color: #fff;
+  background: #222627;
+  padding: 0px 4px 1px 4px;
+  font-size: 12px;
+}
+.index-visual {
+  margin-top: 70px;
+  background: url(../images/cont/bg_feature.png) no-repeat center center;
+  background-size: cover;
+  height: 370px;
+  text-align: center;
+  color: #fff;
+}
+.index-title {
+  font-size: 40px;
+  font-weight: 700;
+  padding-top: 100px;
+  padding-bottom: 20px;
 }
 .container-breadCrumb {
   /* padding-bottom: 20px;
   border-bottom: 1px solid #e8e8e8; */
   color: #cacaca;
+}
+.index-btns a {
+  height: 46px;
+  line-height: 39px;
+  display: inline-block;
+  border: 3px solid #fff;
+  font-weight: 700;
+  width: 170px;
+  margin: 0px 10px;
+}
+.btn-outline {
+  color: #fff;
+}
+.btn-outline:hover {
+  background: #fff;
+  color: #16b5d0;
+}
+.btn-solid {
+  background: #fff;
+  color: #16b5d0;
+}
+.btn-solid:hover {
+  background: transparent;
+  color: #fff;
 }
 .step {
   padding: 0px 5px;
@@ -221,7 +268,7 @@ pre[class*='language-'].line-numbers.line-numbers code {
 .footer {
   position: relative;
   background: #222627;
-  z-index: 11;
+  /* z-index: 11; */
   padding-bottom: 1px;
 }
 .footer .inner {
@@ -740,6 +787,7 @@ pre[class*='language-'].line-numbers.line-numbers code {
 }
 .contents-list {
   max-width: 230px;
+  width: 230px;
   position: fixed;
   right: 60px;
   top: 150px;
@@ -771,4 +819,27 @@ pre[class*='language-'].line-numbers.line-numbers code {
   background: #fff;
   padding: 24px 60px 24px 24px;
   margin: 0;
+}
+.contents-doc table {
+  width: 100%;
+  text-align: left;
+  border-radius: 2px 2px 0 0;
+  border-collapse: separate;
+  border-spacing: 0;
+  font-size: 12px;
+  border-top: 1px solid #e8e8e8;
+  border-left: 1px solid #e8e8e8;
+}
+.contents-doc table th {
+  padding: 8px 8px;
+  font-weight: 700;
+  border-right: 1px solid #e8e8e8;
+  text-align: center;
+  border-bottom: 3px solid #313131;
+}
+.contents-doc table td {
+  border-bottom: 1px solid #e8e8e8;
+  transition: all 0.3s, border 0s;
+  padding: 8px 8px;
+  border-right: 1px solid #e8e8e8;
 }
