--- a/src/css/style.css
+++ b/src/css/style.css
@@ -843,3 +843,8 @@ pre[class*='language-'].line-numbers.line-numbers code {
   padding: 8px 8px;
   border-right: 1px solid #e8e8e8;
 }
+.index-contents {
+  width: 1100px;
+  position: relative;
+  margin: 0px auto;
+}
