--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,7 +36,7 @@ h1 {
   font-weight: 700;
   line-height: 1.25;
   padding-bottom: 20px;
-  border-bottom: 2px solid #e8e8e8;
+  border-bottom: 3px solid #3d3a45;
   margin-bottom: 50px;
 }
 h2 {
@@ -139,7 +139,7 @@ pre[class*='language-'].line-numbers.line-numbers code {
   overflow-y: scroll;
   overflow-x: hidden;
   position: fixed;
-  background: #f5f7f9;
+  background: #fafafa;
   /* overflow-y: scroll;
   overflow-x: hidden;
   height: 100vh; */
@@ -215,6 +215,8 @@ pre[class*='language-'].line-numbers.line-numbers code {
   /* padding-bottom: 20px;
   border-bottom: 1px solid #e8e8e8; */
   color: #cacaca;
+  margin-top: 10px;
+  margin-bottom: 70px;
 }
 .index-btns a {
   height: 46px;
@@ -250,13 +252,14 @@ pre[class*='language-'].line-numbers.line-numbers code {
   height: 100vh;
 } */
 .ant-layout {
-  margin-left: 300px;
-  margin-top: 48px;
+  margin-left: 257px;
+  background: #fff;
+  /* margin-top: 48px; */
 }
 .ant-layout-content {
   flex: auto;
   min-height: 600px;
-  padding: 24px 0px 24px 40px;
+  padding: 24px 0px 24px 70px;
 }
 /* footer */
 .ant-layout-footer {
@@ -721,7 +724,11 @@ pre[class*='language-'].line-numbers.line-numbers code {
   line-height: 26px;
   list-style-position: inside;
   list-style-type: disc;
-  padding-left: 38px !important;
+  padding-left: 25px !important;
+  margin-bottom: 0px;
+}
+.ant-menu-submenu .ant-menu-sub {
+  padding-bottom: 15px;
 }
 .ant-menu-vertical .ant-menu-item::after,
 .ant-menu-vertical-left .ant-menu-item::after,
@@ -739,8 +746,25 @@ pre[class*='language-'].line-numbers.line-numbers code {
   content: '';
 }
 .ant-menu-submenu {
-  /* border-bottom: 1px solid #e8e8e8; */
-  padding-bottom: 15px !important;
+  border-bottom: 1px solid #e8e8e8;
+  /* padding-bottom: 15px !important; */
+}
+.ant-menu-submenu-open {
+  background: #fff;
+}
+.ant-menu-vertical > .ant-menu-item,
+.ant-menu-vertical-left > .ant-menu-item,
+.ant-menu-vertical-right > .ant-menu-item,
+.ant-menu-inline > .ant-menu-item,
+.ant-menu-vertical > .ant-menu-submenu > .ant-menu-submenu-title,
+.ant-menu-vertical-left > .ant-menu-submenu > .ant-menu-submenu-title,
+.ant-menu-vertical-right > .ant-menu-submenu > .ant-menu-submenu-title,
+.ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title {
+  height: 37px;
+  line-height: 35px;
+  font-size: 12px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .ant-menu-item:hover,
 .ant-menu-item-active,
@@ -790,8 +814,9 @@ pre[class*='language-'].line-numbers.line-numbers code {
   width: 230px;
   position: fixed;
   right: 60px;
-  top: 150px;
-  background: #f5f7f9;
+  top: 214px;
+  /* background: #f5f7f9; */
+  border: 1px solid #dcdcdc;
   padding: 15px 25px;
   border-radius: 2px;
   font-size: 12px;
@@ -809,10 +834,13 @@ pre[class*='language-'].line-numbers.line-numbers code {
   font-weight: 700;
   font-size: 14px;
   padding-bottom: 15px;
+  border-bottom: 1px solid #dcdcdc;
+  margin-bottom: 15px;
 }
 .contents-doc {
-  background: #fff;
-  padding: 24px 320px 24px 24px;
+  width: calc(100% - 320px);
+  background: url(../images/common/bg_doc.svg) no-repeat left top #fff;
+  /* padding: 0px 320px 24px 24px; */
   margin: 0;
 }
 .contents-page {
@@ -844,7 +872,39 @@ pre[class*='language-'].line-numbers.line-numbers code {
   border-right: 1px solid #e8e8e8;
 }
 .index-contents {
-  width: 1100px;
+  width: 1000px;
   position: relative;
   margin: 0px auto;
+  padding: 60px 0px;
+}
+.index-sdk-banner {
+  border-radius: 2px;
+  padding: 30px;
+  transition: box-shadow 0.3s;
+  color: #3d3a45;
+}
+.index-sdk-banner:hover {
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.08);
+}
+.index-sdk-banner img {
+  display: inline-block;
+  vertical-align: middle;
+  width: 40px;
+  margin-top: 10px;
+}
+.index-sdk-banner-content {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 20px;
+  width: calc(100% - 60px);
+}
+.index-sdk-banner-title {
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  display: block;
+}
+.index-sdk-banner-text {
+  display: block;
+  background: url('../images/common/chevron-right.svg') no-repeat right top;
 }
